fix https://trello.com/c/1jRTJPem/2130-archived-and-resolved-codemarks-are-no-longer-repositioning-themselves-when-they-overlap

--- a/shared/ui/styles/codemarks.less
+++ b/shared/ui/styles/codemarks.less
@@ -201,7 +201,7 @@
 			// transform: none;
 
 			.contents {
-				visibility: hidden;
+				// visibility: hidden;
 			}
 			&.unpinned {
 				background: repeating-linear-gradient(
