--- a/shared/ui/styles/inline.less
+++ b/shared/ui/styles/inline.less
@@ -52,8 +52,8 @@
 
 	.cs-hidden & {
 		background-color: var(--base-background-color);
-		position: absolute;
-		z-index: 0;
+		// position: absolute;
+		// z-index: 0;
 
 		// &,
 		// * {
